--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ body {
 /* @media(max-width:600px) { */
 .linking p{
   font-size: 20px;
+  transition: all 300ms ease-in-out 0s;
 }
 
 .linking p:hover{
